# visa-kit

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE.md.bak_old  Dockerfile  MANAGER_GUIDE.md  NAIM_ANALYSIS.md  PROJECT_STATE.md  PROJECT_STATE.md.bak_20260507_185904  QUICKSTART_WINDOWS.md  README.md  apostille_sfr_renderer.py  apply_bank_act_number_fix.py  apply_bank_proration.py  apply_bank_realistic_spend.py  apply_code_nowrap_fix.py  apply_director_name_coherence_fix.py  apply_docfmt_phase1.py  apply_docfmt_phase1b.py  apply_docfmt_phase2.py  apply_docfmt_phase3_backend.py  apply_docfmt_phase3_front.py  apply_docfmt_phase4_backend.py  apply_docfmt_phase4_docgrid.py  apply_docfmt_phase4_translation.py  apply_fix_tie_drawer_save.py  apply_guard_director_latin.py  apply_initials_nbsp_fix.py  apply_name_coherence_fix.py  apply_pack15_6.ps1  apply_pack25_10_finish.py  apply_pack25_10_frontend.py  apply_pack26_0_1.py  apply_pack26_0_stage_b.py  apply_pack27_0_stage_b.py  apply_pack29_4_frontend.py  apply_pack32_0.py  apply_pack32_1.py  apply_pack32_2.py  apply_pack32_3.py  (+84 more)
backend/: .env.example  _README_BACKEND_PATCH.md  _check_app65.py  _check_passports.py  _reset_app65.py  _reset_soo65.py  apply_pack25_11.py  apply_pack25_12.py  apply_pack25_8.py  apply_pack25_8_finish.py  apply_pack25_9.py  apply_pack25_9_1.py  apply_pack26_0_stage_a.py  apply_pack27_0_stage_a.py  apply_pack29_1_correction.py  apply_pack29_2_buki_kpp.py  apply_pack29_3_1_hotfix.py  apply_pack29_3_backend.py  apply_pack29_migration.py  bank_statement_generator.py.new  check_app51.py  check_tbank.py  (+27 more)
(+431 files in other folders)
